--- a/pollution/index.html
+++ b/pollution/index.html
@@ -38,6 +38,15 @@
     <button onclick="chart('auber')" type="button">Auber</button>
     <button onclick="chart('chatelet')" type="button">Châtelet</button>
     <button onclick="chart('franklin')" type="button">Franklin</button>
+    <button onclick="chart('auteuil')" type="button">BP Auteuil</button>
+    <button onclick="chart('basch')" type="button">Pl. Victor Basch</button>
+    <button onclick="chart('bp_est')" type="button">BP Est</button>
+    <button onclick="chart('def')" type="button">La Défense</button>
+    <button onclick="chart('elys')" type="button">Champs-Elysées</button>
+    <button onclick="chart('haus')" type="button">Boulevard Haussmann</button>
+    <button onclick="chart('pa04c')" type="button">Centre</button>
+    <button onclick="chart('pa15l')" type="button">Stade Lenglen</button>
+    <button onclick="chart('pa18')" type="button">XVIIIème</button>
 
     <script type="text/javascript">
       var margin = { top : 50 , right : 50 , bottom : 50 , left : 50 },
@@ -71,9 +80,15 @@
               value: +d.value
             };
           },
+
+          // Réglementation PM10  // Europe : 40µg/m3 annuelle / 50µg/m3 journalier sur 35 jours
+          //                      // OMS : 50µg/m3 journalier sur 3 jours / 20µg/m3 annuelle
+          //                      // France : 80µg/m3 journalier (alerte) / <30µg/m3 annuelle (qualité)
+
           function(error, data) {
             var colorScale = d3.scale.quantile()
-                               .domain([0, 331])
+//                             .domain([0, 331])
+                               .domain(d3.extent(data, function(d) { return d.value; }))
                                .range(colors);
 
             var svg = d3.select('#chart').append('svg')
@@ -155,7 +170,7 @@
       for (var i = 0; i < search.length; ++i) {
           search[i] = search[i].split('=');
           if (search[i][0] === 'd') {
-              if (['auber', 'chatelet', 'franklin'].indexOf(search[i][1]) >= 0) {
+              if (['auber','auteuil','basch','bp_est','chatelet','def','elys','franklin','haus','pa04c','pa15l','pa18'].indexOf(search[i][1]) >= 0) {
                   toLoad = search[i][1];
               }
               break;
